--- a/src/assets/master.css
+++ b/src/assets/master.css
@@ -7,8 +7,9 @@
 
 html,
 body {
-    height     : 100%;
+    min-height : 100vh;
     font-family: "Open Sans", serif;
+    overflow-y : auto;
 }
 
 a {
@@ -20,14 +21,25 @@ li {
     list-style: none;
 }
 
-#root {
-    height: 100%;
-}
 
 .main-page {
-    height          : 100%;
+    min-height      : 100vh;
     background-color: #0f0715;
     display         : flex;
     flex-direction  : column;
     justify-content : space-between;
+}
+
+.card {
+    width           : 100%;
+    min-height      : 150px;
+    background-color: #140c1c;
+    border          : 1px solid #2a1454;
+    padding         : 20px;
+    border-radius   : 15px;
+    margin-bottom   : 24px;
+
+    &:last-child {
+        margin-bottom: 0;
+    }
 }
