--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -62,7 +62,7 @@ header {
 
         }
 
-        button {
+        .btn-resume {
             width           : 145px;
             height          : 50px;
             background-color: #8750f7;
@@ -73,6 +73,7 @@ header {
             border-radius   : 30px;
             border          : none;
             font-size       : 1.1em;
+            cursor          : pointer;
         }
     }
 
