--- a/src/assets/master.css
+++ b/src/assets/master.css
@@ -43,3 +43,51 @@ li {
         margin-bottom: 0;
     }
 }
+
+.txt-gradient {
+    font-weight     : 700;
+    line-height     : 1.2;
+    background-image: linear-gradient(90deg, #8750f7, #fff);
+    font-size       : 2.5em;
+    background-clip : text;
+    color           : transparent;
+    display         : inline-block;
+}
+
+.btn {
+    min-width       : 132px;
+    height          : 45px;
+    background-color: #8750f7;
+    color           : #fff;
+    font-weight     : 600;
+    outline         : none;
+    border-radius   : 30px;
+    border          : none;
+    font-size       : 0.9em;
+    cursor          : pointer;
+    padding         : 0 16px;
+    transition      : 0.8s;
+    position        : relative;
+
+    &:hover {
+        background-color: #7c27cc;
+
+        i.bi {
+            animation: hide-icon 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+        }
+    }
+}
+
+@keyframes hide-icon {
+    0% {
+        opacity: 0;
+    }
+
+    50% {
+        opacity: 0.5;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
