--- a/src/components/main/experience/experience.css
+++ b/src/components/main/experience/experience.css
@@ -1,13 +1,13 @@
 .experience-card {
     display        : flex;
     justify-content: space-between;
-    padding        : 20px 90px;
+    padding        : 60px 90px !important;
 
     li {
         display       : flex;
         flex-direction: column;
         color         : #ddd;
-        font-size     : 2.5em;
+        font-size     : 2.3em;
         gap           : 6px;
         font-weight: 600;
 
