--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -1,9 +1,10 @@
 header {
     width          : 100%;
-    height         : 120px;
+    height         : 98px;
     padding        : 20px 90px;
     display        : flex;
     justify-content: space-between;
+    transition     : 0.5s ease-in-out;
 
     .section-left,
     .section-right {
@@ -64,4 +65,12 @@ header {
 
     }
 
+}
+
+header.scrolled {
+    position  : fixed;
+    top       : 0;
+    left      : 0;
+    background: #050709;
+    z-index   : 1000;
 }
