--- a/src/assets/master.css
+++ b/src/assets/master.css
@@ -2,11 +2,13 @@
     padding   : 0;
     margin    : 0;
     box-sizing: border-box;
-
 }
 
 html,
 body {
+    width          : 100%;
+    overflow-x     : hidden;
+    font-size      : 16px;
     min-height     : 100vh;
     font-family    : "Open Sans", serif;
     overflow-y     : auto;
@@ -31,6 +33,10 @@ li {
     display         : flex;
     flex-direction  : column;
     justify-content : space-between;
+}
+
+.container {
+    padding: 0 90px;
 }
 
 .card {
@@ -92,5 +98,12 @@ li {
 
     100% {
         opacity: 1;
+    }
+}
+
+
+@media screen and (max-width: 768px) {
+    .container {
+        padding: 0 40px;
     }
 }
