--- a/src/components/main/about/about.css
+++ b/src/components/main/about/about.css
@@ -2,7 +2,6 @@
     display    : flex;
     align-items: center;
     gap        : 60px;
-
 }
 
 .image {
@@ -74,11 +73,22 @@
     0% {
         width : 50%;
         height: 50%;
-
     }
 
     100% {
         width : 100%;
         height: 100%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .about-card {
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+    .image {
+        width: 290px;
     }
 }
