--- a/src/components/main/contact/contact.css
+++ b/src/components/main/contact/contact.css
@@ -1,26 +1,40 @@
 .contact-card {
     p {
-        color: #ddd;
+        color : #ddd;
         margin: 16px 0;
     }
 }
+
 form {
-    display: flex;
+    display       : flex;
     flex-direction: column;
-    width: 50vw;
+    width         : 50vw;
 }
 
-input, textarea {
-    background: none;
-    border: none;
+input,
+textarea {
+    background   : none;
+    border       : none;
     border-bottom: 1px solid #666;
-    padding: 10px;
-    color: #ddd;
+    padding      : 10px;
+    color        : #ddd;
     margin-bottom: 15px;
-    font-size: 16px;
+    font-size    : 16px;
 }
 
-input:focus, textarea:focus {
-    outline: none;
+input:focus,
+textarea:focus {
+    outline      : none;
     border-bottom: 1px solid #a855f7;
+}
+
+@media screen and (max-width: 768px) {
+    form {
+        width: 80vw;
+    }
+}
+@media screen and (max-width: 767px) and (min-width: 320px) {
+    form {
+        width: 100%;
+    }
 }
