--- a/src/components/main/experience/experience.css
+++ b/src/components/main/experience/experience.css
@@ -9,15 +9,30 @@
         color         : #ddd;
         font-size     : 2.3em;
         gap           : 6px;
-        font-weight: 600;
+        font-weight   : 600;
 
         .experience-icon {
             color: #8750f7;
         }
 
         .experience-title {
-            font-size: 0.6em;
+            font-size  : 0.6em;
             font-weight: 400;
+        }
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .experience-card {
+        flex-direction: column;
+        padding       : 30px !important;
+    }
+
+    li {
+        margin-bottom: 16px;
+
+        &:last-child {
+            margin-bottom: 0;
         }
     }
 }
